--- a/ui/coverartdialog.ui
+++ b/ui/coverartdialog.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>CoverArtDialog</class>
- <widget class="QDialog" name="CoverArtDialog" >
-  <property name="geometry" >
+ <widget class="QDialog" name="CoverArtDialog">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,25 +10,16 @@
     <height>393</height>
    </rect>
   </property>
-  <layout class="QHBoxLayout" >
-   <property name="spacing" >
-    <number>6</number>
+  <layout class="QHBoxLayout">
+   <property name="spacing">
+    <number>0</number>
    </property>
-   <property name="leftMargin" >
-    <number>9</number>
-   </property>
-   <property name="topMargin" >
-    <number>9</number>
-   </property>
-   <property name="rightMargin" >
-    <number>9</number>
-   </property>
-   <property name="bottomMargin" >
-    <number>9</number>
+   <property name="margin">
+    <number>0</number>
    </property>
    <item>
-    <widget class="QLabel" name="coverArtImageLabel" >
-     <property name="text" >
+    <widget class="QLabel" name="coverArtImageLabel">
+     <property name="text">
       <string/>
      </property>
     </widget>
