--- a/ui/metainfodialog.ui
+++ b/ui/metainfodialog.ui
@@ -1,8 +1,9 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <author>Håvard Tautra Knutsen</author>
  <class>MetaInfoDialog</class>
- <widget class="QDialog" name="MetaInfoDialog" >
-  <property name="geometry" >
+ <widget class="QDialog" name="MetaInfoDialog">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,65 +11,47 @@
     <height>454</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>File information</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
-   <property name="leftMargin" >
-    <number>9</number>
-   </property>
-   <property name="topMargin" >
-    <number>9</number>
-   </property>
-   <property name="rightMargin" >
-    <number>9</number>
-   </property>
-   <property name="bottomMargin" >
+   <property name="margin">
     <number>9</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
+     <property name="margin">
       <number>0</number>
      </property>
      <item>
-      <widget class="QLabel" name="metaInfoDialogLabel" />
+      <widget class="QLabel" name="metaInfoDialogLabel"/>
      </item>
      <item>
-      <widget class="QLabel" name="label_2" >
-       <property name="text" >
+      <widget class="QLabel" name="label_2">
+       <property name="text">
         <string>File information</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="progressLabel" >
-       <property name="text" >
+      <widget class="QLabel" name="progressLabel">
+       <property name="text">
         <string/>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -76,199 +59,194 @@
        </property>
       </spacer>
      </item>
+     <item>
+	  <widget class="ClickableLabel" name="l_coverArt">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
-    <widget class="Line" name="line" >
-     <property name="orientation" >
+    <widget class="Line" name="line">
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" >
-     <property name="leftMargin" >
+    <layout class="QGridLayout">
+     <property name="margin">
       <number>0</number>
      </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
-      <number>0</number>
-     </property>
-     <property name="horizontalSpacing" >
+     <property name="spacing">
       <number>6</number>
      </property>
-     <property name="verticalSpacing" >
-      <number>6</number>
-     </property>
-     <item row="5" column="1" colspan="5" >
-      <widget class="QLineEdit" name="composerEdit" >
-       <property name="readOnly" >
+     <item row="5" column="1" colspan="5">
+      <widget class="QLineEdit" name="composerEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="0" column="0" >
-      <widget class="QLabel" name="trackLabel" >
-       <property name="text" >
+     <item row="0" column="0">
+      <widget class="QLabel" name="trackLabel">
+       <property name="text">
         <string>Track #:</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="artistLabel" >
-       <property name="text" >
+     <item row="2" column="0">
+      <widget class="QLabel" name="artistLabel">
+       <property name="text">
         <string>Artist:</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" >
-      <widget class="QLineEdit" name="trackEdit" >
-       <property name="readOnly" >
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="trackEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" >
-      <widget class="QLabel" name="titleLabel" >
-       <property name="text" >
+     <item row="1" column="0">
+      <widget class="QLabel" name="titleLabel">
+       <property name="text">
         <string>Title:</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1" colspan="5" >
-      <widget class="QLineEdit" name="albumEdit" >
-       <property name="readOnly" >
+     <item row="3" column="1" colspan="5">
+      <widget class="QLineEdit" name="albumEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="0" column="5" >
-      <widget class="QLineEdit" name="lengthEdit" >
-       <property name="readOnly" >
+     <item row="0" column="5">
+      <widget class="QLineEdit" name="lengthEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="0" column="2" >
-      <widget class="QLabel" name="dateLabel" >
-       <property name="text" >
+     <item row="0" column="2">
+      <widget class="QLabel" name="dateLabel">
+       <property name="text">
         <string>Date:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1" colspan="5" >
-      <widget class="QLineEdit" name="genreEdit" >
-       <property name="readOnly" >
+     <item row="4" column="1" colspan="5">
+      <widget class="QLineEdit" name="genreEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="8" column="1" colspan="5" >
-      <widget class="QLineEdit" name="discEdit" >
-       <property name="readOnly" >
+     <item row="8" column="1" colspan="5">
+      <widget class="QLineEdit" name="discEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="2" column="1" colspan="5" >
-      <widget class="QLineEdit" name="artistEdit" >
-       <property name="readOnly" >
+     <item row="2" column="1" colspan="5">
+      <widget class="QLineEdit" name="artistEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="0" column="3" >
-      <widget class="QLineEdit" name="dateEdit" >
-       <property name="readOnly" >
+     <item row="0" column="3">
+      <widget class="QLineEdit" name="dateEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="0" column="4" >
-      <widget class="QLabel" name="lengthLabel" >
-       <property name="text" >
+     <item row="0" column="4">
+      <widget class="QLabel" name="lengthLabel">
+       <property name="text">
         <string>Length:</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="5" >
-      <widget class="QLineEdit" name="titleEdit" >
-       <property name="readOnly" >
+     <item row="1" column="1" colspan="5">
+      <widget class="QLineEdit" name="titleEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="9" column="1" colspan="5" >
-      <widget class="QLineEdit" name="urlEdit" >
-       <property name="readOnly" >
+     <item row="9" column="1" colspan="5">
+      <widget class="QLineEdit" name="urlEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="9" column="0" >
-      <widget class="QLabel" name="urlLabel" >
-       <property name="text" >
+     <item row="9" column="0">
+      <widget class="QLabel" name="urlLabel">
+       <property name="text">
         <string>URL:</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0" >
-      <widget class="QLabel" name="composerLabel" >
-       <property name="text" >
+     <item row="5" column="0">
+      <widget class="QLabel" name="composerLabel">
+       <property name="text">
         <string>Composer:</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0" >
-      <widget class="QLabel" name="albumLabel" >
-       <property name="text" >
+     <item row="3" column="0">
+      <widget class="QLabel" name="albumLabel">
+       <property name="text">
         <string>Album:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0" >
-      <widget class="QLabel" name="genreLabel" >
-       <property name="text" >
+     <item row="4" column="0">
+      <widget class="QLabel" name="genreLabel">
+       <property name="text">
         <string>Genre:</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1" colspan="5" >
-      <widget class="QLineEdit" name="commentEdit" >
-       <property name="readOnly" >
+     <item row="7" column="1" colspan="5">
+      <widget class="QLineEdit" name="commentEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="8" column="0" >
-      <widget class="QLabel" name="discLabel" >
-       <property name="text" >
+     <item row="8" column="0">
+      <widget class="QLabel" name="discLabel">
+       <property name="text">
         <string>Disc:</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="0" >
-      <widget class="QLabel" name="commentLabel" >
-       <property name="text" >
+     <item row="7" column="0">
+      <widget class="QLabel" name="commentLabel">
+       <property name="text">
         <string>Comment:</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1" colspan="5" >
-      <widget class="QLineEdit" name="performerEdit" >
-       <property name="readOnly" >
+     <item row="6" column="1" colspan="5">
+      <widget class="QLineEdit" name="performerEdit">
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="6" column="0" >
-      <widget class="QLabel" name="performerLabel" >
-       <property name="text" >
+     <item row="6" column="0">
+      <widget class="QLabel" name="performerLabel">
+       <property name="text">
         <string>Performer:</string>
        </property>
       </widget>
@@ -277,10 +255,10 @@
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>434</width>
        <height>16</height>
@@ -289,28 +267,19 @@
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
+     <property name="margin">
       <number>0</number>
      </property>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>131</width>
          <height>9</height>
@@ -319,40 +288,40 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="prevButton" >
-       <property name="enabled" >
+      <widget class="QPushButton" name="prevButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="toolTip" >
+       <property name="toolTip">
         <string/>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Previous</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="nextButton" >
-       <property name="enabled" >
+      <widget class="QPushButton" name="nextButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="toolTip" >
+       <property name="toolTip">
         <string/>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Next</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Minimum</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>10</width>
          <height>10</height>
@@ -361,8 +330,8 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>&amp;OK</string>
        </property>
       </widget>
@@ -370,8 +339,8 @@
     </layout>
    </item>
   </layout>
-  <widget class="QWidget" native="1" name="widget" >
-   <property name="geometry" >
+  <widget class="QWidget" name="widget" native="true">
+   <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
@@ -397,8 +366,6 @@
   <tabstop>discEdit</tabstop>
   <tabstop>urlEdit</tabstop>
  </tabstops>
- <resources>
-  <include location="../qmpdclient.qrc" />
- </resources>
+ <resources/>
  <connections/>
 </ui>
