--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -1,8 +1,9 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <author>Håvard Tautra Knutsen</author>
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow" >
-  <property name="geometry" >
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,26 +11,25 @@
     <height>658</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string/>
   </property>
-  <property name="windowIcon" >
-   <iconset resource="../qmpdclient.qrc" >:/icons/svg/qmpdclient.svg</iconset>
+  <property name="windowIcon">
+   <iconset resource="../qmpdclient.qrc">
+    <normaloff>:/icons/svg/qmpdclient.svg</normaloff>:/icons/svg/qmpdclient.svg</iconset>
   </property>
-  <widget class="QWidget" name="centralwidget" >
-   <layout class="QVBoxLayout" >
-    <property name="margin" >
-     <number>3</number>
-    </property>
-    <property name="spacing" >
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout">
+    <property name="spacing">
      <number>6</number>
     </property>
+    <property name="margin">
+     <number>3</number>
+    </property>
     <item>
-     <widget class="ControlPanel" native="1" name="controlPanel" >
-      <property name="sizePolicy" >
-       <sizepolicy>
-        <hsizetype>13</hsizetype>
-        <vsizetype>0</vsizetype>
+     <widget class="ControlPanel" name="controlPanel" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -37,36 +37,36 @@
      </widget>
     </item>
     <item>
-     <layout class="QHBoxLayout" >
-      <property name="margin" >
-       <number>0</number>
-      </property>
-      <property name="spacing" >
+     <layout class="QHBoxLayout">
+      <property name="spacing">
        <number>4</number>
       </property>
+      <property name="margin">
+       <number>0</number>
+      </property>
       <item>
-       <widget class="IdealBar" native="1" name="leftBar" />
+       <widget class="IdealBar" name="leftBar" native="true"/>
       </item>
       <item>
-       <widget class="IdealSplitter" name="splitter" >
-        <property name="orientation" >
+       <widget class="IdealSplitter" name="splitter">
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <widget class="QStackedWidget" name="leftStack" >
-         <property name="currentIndex" >
+        <widget class="QStackedWidget" name="leftStack">
+         <property name="currentIndex">
           <number>-1</number>
          </property>
         </widget>
-        <widget class="QStackedWidget" name="rightStack" >
-         <property name="currentIndex" >
+        <widget class="QStackedWidget" name="rightStack">
+         <property name="currentIndex">
           <number>-1</number>
          </property>
         </widget>
        </widget>
       </item>
       <item>
-       <widget class="IdealBar" native="1" name="rightBar" >
-        <property name="layoutDirection" >
+       <widget class="IdealBar" name="rightBar" native="true">
+        <property name="layoutDirection">
          <enum>Qt::RightToLeft</enum>
         </property>
        </widget>
@@ -75,144 +75,145 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar" >
-   <property name="geometry" >
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>911</width>
-     <height>28</height>
+     <height>25</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menu_File" >
-    <property name="title" >
+   <widget class="QMenu" name="menu_File">
+    <property name="title">
      <string>&amp;MPD</string>
     </property>
-    <widget class="QMenu" name="connectMenu" >
-     <property name="title" >
+    <widget class="QMenu" name="connectMenu">
+     <property name="title">
       <string>&amp;Connect to...</string>
      </property>
     </widget>
-    <addaction name="connectMenu" />
-    <addaction name="disconnectMenu" />
-    <addaction name="rescanMenu" />
-    <addaction name="separator" />
-    <addaction name="jumpToSong" />
-    <addaction name="separator" />
-    <addaction name="preferencesMenu" />
-    <addaction name="separator" />
-    <addaction name="quitMenu" />
+    <addaction name="connectMenu"/>
+    <addaction name="disconnectMenu"/>
+    <addaction name="rescanMenu"/>
+    <addaction name="separator"/>
+    <addaction name="jumpToSong"/>
+    <addaction name="separator"/>
+    <addaction name="preferencesMenu"/>
+    <addaction name="separator"/>
+    <addaction name="quitMenu"/>
    </widget>
-   <widget class="QMenu" name="menu_Help" >
-    <property name="title" >
+   <widget class="QMenu" name="menu_Help">
+    <property name="title">
      <string>&amp;Help</string>
     </property>
-    <addaction name="about" />
-    <addaction name="aboutQt" />
+    <addaction name="about"/>
+    <addaction name="aboutQt"/>
    </widget>
-   <addaction name="menu_File" />
-   <addaction name="menu_Help" />
+   <addaction name="menu_File"/>
+   <addaction name="menu_Help"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar" >
-   <property name="sizeGripEnabled" >
+  <widget class="QStatusBar" name="statusbar">
+   <property name="sizeGripEnabled">
     <bool>false</bool>
    </property>
   </widget>
-  <action name="about" >
-   <property name="icon" >
-    <iconset resource="../qmpdclient.qrc" >:/icons/svg/qmpdclient.svg</iconset>
+  <action name="about">
+   <property name="icon">
+    <iconset resource="../qmpdclient.qrc">
+     <normaloff>:/icons/svg/qmpdclient.svg</normaloff>:/icons/svg/qmpdclient.svg</iconset>
    </property>
-   <property name="text" >
+   <property name="text">
     <string>&amp;About...</string>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>About...</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>F1</string>
    </property>
   </action>
-  <action name="aboutQt" >
-   <property name="text" >
+  <action name="aboutQt">
+   <property name="text">
     <string>About &amp;Qt...</string>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>About Qt...</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Shift+F1</string>
    </property>
   </action>
-  <action name="disconnectMenu" >
-   <property name="text" >
+  <action name="disconnectMenu">
+   <property name="text">
     <string>&amp;Disconnect</string>
    </property>
-   <property name="statusTip" >
+   <property name="statusTip">
     <string>Disconnect from server</string>
    </property>
-   <property name="whatsThis" >
+   <property name="whatsThis">
     <string>Disconnect from server</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+D</string>
    </property>
   </action>
-  <action name="rescanMenu" >
-   <property name="text" >
+  <action name="rescanMenu">
+   <property name="text">
     <string>&amp;Rescan library</string>
    </property>
-   <property name="statusTip" >
+   <property name="statusTip">
     <string>Rescan songs</string>
    </property>
-   <property name="whatsThis" >
+   <property name="whatsThis">
     <string>Rescan songs</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+R</string>
    </property>
   </action>
-  <action name="jumpToSong" >
-   <property name="text" >
-    <string>&amp;Jump To Current Song...</string>
+  <action name="jumpToSong">
+   <property name="text">
+    <string>&amp;Jump to current song</string>
    </property>
-   <property name="statusTip" >
+   <property name="statusTip">
     <string>Jump to current song...</string>
    </property>
-   <property name="whatsThis" >
+   <property name="whatsThis">
     <string>Jump to current song...</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+J</string>
    </property>
   </action>
-  <action name="preferencesMenu" >
-   <property name="text" >
+  <action name="preferencesMenu">
+   <property name="text">
     <string>&amp;Preferences...</string>
    </property>
-   <property name="statusTip" >
+   <property name="statusTip">
     <string>Show preferences dialog...</string>
    </property>
-   <property name="whatsThis" >
+   <property name="whatsThis">
     <string>Show preferences dialog...</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+P</string>
    </property>
-   <property name="menuRole" >
+   <property name="menuRole">
     <enum>QAction::NoRole</enum>
    </property>
   </action>
-  <action name="quitMenu" >
-   <property name="text" >
+  <action name="quitMenu">
+   <property name="text">
     <string>&amp;Quit</string>
    </property>
-   <property name="statusTip" >
+   <property name="statusTip">
     <string>Quit QMPDClient</string>
    </property>
-   <property name="whatsThis" >
+   <property name="whatsThis">
     <string>Quit QMPDClient</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+Q</string>
    </property>
   </action>
@@ -236,7 +237,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../qmpdclient.qrc" />
+  <include location="../qmpdclient.qrc"/>
  </resources>
  <connections/>
 </ui>
