Jump to song, relabelled as Locate song
 * shortcut key is now Ctrl+O
 * Closes #5

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -97,7 +97,7 @@
     <addaction name="disconnectMenu"/>
     <addaction name="rescanMenu"/>
     <addaction name="separator"/>
-    <addaction name="jumpToSong"/>
+    <addaction name="locateSong"/>
     <addaction name="separator"/>
     <addaction name="preferencesMenu"/>
     <addaction name="separator"/>
@@ -172,18 +172,18 @@
     <string>Ctrl+R</string>
    </property>
   </action>
-  <action name="jumpToSong">
+  <action name="locateSong">
    <property name="text">
-    <string>&amp;Jump to current song</string>
+    <string>L&amp;ocate current song</string>
    </property>
    <property name="statusTip">
-    <string>Jump to current song...</string>
+    <string>Locate current song in library...</string>
    </property>
    <property name="whatsThis">
-    <string>Jump to current song...</string>
+    <string>Locate current song in library...</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+J</string>
+    <string>Ctrl+O</string>
    </property>
   </action>
   <action name="preferencesMenu">
