--- a/ui/preferencesdialog.ui
+++ b/ui/preferencesdialog.ui
@@ -1621,35 +1621,79 @@
              <property name="checkable">
               <bool>true</bool>
              </property>
-             <layout class="QFormLayout" name="formLayout">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_10">
-                <property name="text">
-                 <string>Username:</string>
-                </property>
-                <property name="buddy">
-                 <cstring>lastFmUsernameEdit</cstring>
-                </property>
-               </widget>
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout">
+                <item>
+                 <widget class="QLabel" name="label_10">
+                  <property name="text">
+                   <string>Username:</string>
+                  </property>
+                  <property name="buddy">
+                   <cstring>lastFmUsernameEdit</cstring>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="lastFmUsernameEdit"/>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+               </layout>
               </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="lastFmUsernameEdit"/>
-              </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_11">
-                <property name="text">
-                 <string>Password:</string>
+              <item>
+               <widget class="QGroupBox" name="groupBox_7">
+                <property name="title">
+                 <string>Password</string>
                 </property>
-                <property name="buddy">
-                 <cstring>lastFmPasswordEdit</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1">
-               <widget class="QLineEdit" name="lastFmPasswordEdit">
-                <property name="echoMode">
-                 <enum>QLineEdit::Password</enum>
-                </property>
+                <layout class="QVBoxLayout" name="verticalLayout_4">
+                 <item>
+                  <widget class="QLineEdit" name="lastFmPasswordEdit">
+                   <property name="echoMode">
+                    <enum>QLineEdit::Password</enum>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <layout class="QHBoxLayout" name="horizontalLayout_2">
+                   <item>
+                    <widget class="QRadioButton" name="lastFmPlainPasswordRadio">
+                     <property name="checked">
+                      <bool>true</bool>
+                     </property>
+                     <property name="text">
+                      <string>Plain</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QRadioButton" name="lastFmMd5PasswordRadio">
+                     <property name="text">
+                      <string>MD5</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="pushButton">
+                   <property name="text">
+                    <string>Calculate MD5</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
                </widget>
               </item>
              </layout>
@@ -1754,5 +1798,25 @@
   <tabstop>closeButton</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>PreferencesDialog</receiver>
+   <slot>hashLastFmPassword()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>252</x>
+     <y>194</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>254</x>
+     <y>0</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>hashLastFmPassword()</slot>
+ </slots>
 </ui>
