--- a/ui/preferencesdialog.ui
+++ b/ui/preferencesdialog.ui
@@ -634,6 +634,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="disregardTheCheck">
+             <property name="text">
+              <string>Disregard leading 'The ' when sorting</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer>
              <property name="orientation">
               <enum>Qt::Vertical</enum>
